--- a/css/styles.css
+++ b/css/styles.css
@@ -12,7 +12,28 @@ font-weight: 400;
 font-size: 16px;
 color: var(--text-color);
 }
-    
+.container {
+    width: 1158px;
+    padding-right: 15px;
+    padding-left: 15px;
+    margin-left: auto;
+    margin-right: auto;
+    outline: 2px solid yellow;
+}
+h1, h2, h3,h4, h5,h6,p{
+margin: 0;
+}
+ul, ol{
+margin: 0;
+padding-left: 0;
+}
+button {
+    cursor: pointer;
+}
+img{
+    display: block;
+}
+
 .list{list-style: none;}
 .link{text-decoration: none;
 }
@@ -44,12 +65,27 @@ color:var(--subtitle-color);
     align-items: center;
     letter-spacing: 0.03em;
     text-transform: uppercase;
+    margin-right: 76px;
+    padding-top: 24px;
+    padding-bottom: 24px;
+    
 }
 /* ---------------------------------HEDER------------------------------------------ */
-/* .header {
+.header {
+}
+.header-container{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.header-menu {
+    display: flex;
+    align-items: center;
 }
 .header-navigation {
-} */
+    display: flex;
+    align-items: center;
+}
 .logotype {
 color: var(--accent-color);
 }
@@ -57,11 +93,13 @@ color: var(--accent-color);
     line-height: 1.33;
     color: #2E2F42;
 }
-/* .menu-header-list {
-} */
-/* .menu-header-item {
+.menu-header-list {
+    display: flex;
+    align-items: center;
+}
 
-} */
+.menu-header-item:not(:last-child){
+    margin-right: 40px;}
 .menu-header-link {
     font-weight: 500;
 font-size: 16px;
@@ -75,12 +113,19 @@ color: #2E2F42;
 font-family: 'Roboto' sans-serif;
 font-style: normal;
 } 
+.contacts{
+
+}
+.contacts:not(:last-child){
+    margin-right: 40px;
+}
 .contact-email {
 font-weight: 400;
 font-size: 16px; 
 line-height: 1.5;
 letter-spacing: 0.02em;
 color: #434455;
+margin-left: auto;
 }
 .contact-email:hover,
 .contact-email:focus { color: #404BBF;}
@@ -98,27 +143,46 @@ color: #434455;
     background: #2E2F42;
 }
 .hero-title {
+max-width: 498px;
+margin-left: auto;
+margin-right: auto;
+font-weight: 700;
 font-size: 56px;
 line-height: 1.07;
 text-align: center;
 letter-spacing: 0.02em;
 color: #FFFFFF;
+margin-bottom: 48px;
+padding-top: 188px;
 }
 .type-button {
 display: flex;
 align-items: center;
 color: #FFFFFF;
 background: var(--accent-color);
-cursor: pointer;
+flex-direction: row;
+position: absolute;
+box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+border-radius: 4px;
+padding: 16px 32px 16px 32px;
+text-align: center;
+max-width: 199px;
 }
+
+.hero-containet{
+    
+    padding-bottom: 188px; 
+}
+
 .type-button:hover,
 .type-button:focus {
 background: #404BBF;
 }
 /* ------------------------------Feature------------------------------------- */
 
-/* .feature {
-} */
+.feature {
+    
+}
 .visually-hidden {
 position: absolute;
 white-space: nowrap;
@@ -131,16 +195,23 @@ clip: rect(0 0 0 0);
 clip-path: inset(50%);
 margin: -1px;
 }
-/* .feature-list {
-} */
-/* .feature-subtitle {
-} */
+.feature-list {
+    display: flex;
+    align-items: center;
+    padding-top: 120px;
+    padding-bottom: 120px;
+}
+.feature-item:not(:last-child){
+    margin-right: 24px;}
+
+.feature-subtitle {
+}
 .feature-text {
 color: var(--text-color);
 }
 /* ----------------------------------------PIC------------------------------------------------ */
-/* .pic {
-} */
+.pic {
+}
 .pic-suptitle {
 font-weight: 700;
 font-size: 36px;
@@ -149,9 +220,17 @@ text-align: center;
 letter-spacing: 0.02em;
 text-transform: capitalize;
 color:var(--subtitle-color);
+margin-bottom: 72px;
 }
-/* .pic-list {
-} */
+.pic-list {
+    display: flex;
+    align-items: center;
+    padding-bottom: 120px;
+}
+.pic-item:not(:last-child){
+    margin-right: 24px;
+    }
+
 /* ------------------------------------------TEAM--------------------------------------------- */
 .team {
 background: #F4F4FD;
@@ -164,17 +243,25 @@ text-align: center;
 letter-spacing: 0.02em;
 text-transform: capitalize;
 color: #2E2F42;
+padding-top: 120px;
+margin-bottom: 72px;
 }
-/* .team-list {
-}
-.team-item {
-} */
+.team-list {
+    display: flex;
+    align-items: center;  
+} 
+.team-item:not(:last-child){
+    margin-right: 24px;}
+
 .team-subtitle {
 text-align: center;
+margin-top: 32px;
 }
 .team-text {
+    margin-top: 32px;
 text-align: center;
 color: var(--text-color);
+padding-bottom: 120px;
 }
 .footer {
 background: #2E2F42;
