--- a/css/styles.css
+++ b/css/styles.css
@@ -32,6 +32,8 @@ button {
 }
 img{
     display: block;
+    max-width: 100%;
+    height: auto;
 }
 
 .list{list-style: none;}
@@ -99,21 +101,27 @@ color: var(--accent-color);
 }
 
 .menu-header-item:not(:last-child){
-    margin-right: 40px;}
+    margin-right: 40px;
+}
 .menu-header-link {
     font-weight: 500;
 font-size: 16px;
 line-height: 1.5;
 letter-spacing: 0.02em;
 color: #2E2F42;
+padding-top: 24px;
+padding-bottom: 24px;
 }
 
 /* -----------------------------------CONTACT--------------------------------------- */
+
 .contact {
 font-family: 'Roboto' sans-serif;
 font-style: normal;
 } 
 .contacts{
+    padding-top: 24px;
+    padding-bottom: 24px;
 
 }
 .contacts:not(:last-child){
@@ -141,7 +149,9 @@ color: #434455;
 /* ---------------------------------------HERO--------------------------------------- */
 .hero {
     background: #2E2F42;
+
 }
+
 .hero-title {
 max-width: 498px;
 margin-left: auto;
@@ -161,17 +171,17 @@ align-items: center;
 color: #FFFFFF;
 background: var(--accent-color);
 flex-direction: row;
-position: absolute;
 box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 border-radius: 4px;
 padding: 16px 32px 16px 32px;
 text-align: center;
 max-width: 199px;
+min-height: 56px;
+margin-right: auto;
+margin-left: auto;
 }
 
-.hero-containet{
-    
-    padding-bottom: 188px; 
+.hero-containet{padding-bottom: 188px; 
 }
 
 .type-button:hover,
@@ -181,7 +191,9 @@ background: #404BBF;
 /* ------------------------------Feature------------------------------------- */
 
 .feature {
-    
+}
+.section{
+    padding-top: 120px;
 }
 .visually-hidden {
 position: absolute;
@@ -196,13 +208,11 @@ clip-path: inset(50%);
 margin: -1px;
 }
 .feature-list {
-    display: flex;
-    align-items: center;
-    padding-top: 120px;
-    padding-bottom: 120px;
+display: flex;
+align-items: center;
 }
 .feature-item:not(:last-child){
-    margin-right: 24px;}
+margin-right: 24px;}
 
 .feature-subtitle {
 }
@@ -211,6 +221,7 @@ color: var(--text-color);
 }
 /* ----------------------------------------PIC------------------------------------------------ */
 .pic {
+    padding-bottom: 120px;
 }
 .pic-suptitle {
 font-weight: 700;
@@ -220,12 +231,12 @@ text-align: center;
 letter-spacing: 0.02em;
 text-transform: capitalize;
 color:var(--subtitle-color);
-margin-bottom: 72px;
+padding-bottom: 72px;
 }
 .pic-list {
     display: flex;
     align-items: center;
-    padding-bottom: 120px;
+    width: calc((100%-(24*2))/3);
 }
 .pic-item:not(:last-child){
     margin-right: 24px;
@@ -234,6 +245,7 @@ margin-bottom: 72px;
 /* ------------------------------------------TEAM--------------------------------------------- */
 .team {
 background: #F4F4FD;
+padding-bottom: 120px;
 }
 .team-title {
 font-weight: 700;
@@ -243,25 +255,29 @@ text-align: center;
 letter-spacing: 0.02em;
 text-transform: capitalize;
 color: #2E2F42;
-padding-top: 120px;
 margin-bottom: 72px;
 }
 .team-list {
     display: flex;
     align-items: center;  
+    width: calc((100%-(24*3))/4);
 } 
+.team-item{
+    background-color: #FFFFFF;
+}
 .team-item:not(:last-child){
-    margin-right: 24px;}
+    margin-right: 24px;
+}
 
 .team-subtitle {
 text-align: center;
 margin-top: 32px;
+margin-bottom: 8px;
 }
 .team-text {
-    margin-top: 32px;
 text-align: center;
 color: var(--text-color);
-padding-bottom: 120px;
+padding-bottom: 32px;
 }
 .footer {
 background: #2E2F42;
@@ -270,33 +286,74 @@ background: #2E2F42;
     line-height: 1.16;
 color: #F4F4FD;
 }
+.footer-logo{
+padding-top: 100px; 
+margin-bottom: 16px;
+}
 .footer-text {
 color: #E7E9FC; 
+max-width: 264px;
+padding-bottom: 100px;
 }
 /* -------------------------------PORTFOLIO --------------------------------------------*/
-
-/* .portfolio-button {
-
-} */
+.portfolio-flex{
+    padding-top: 96px;
+    padding-bottom: 72px;
+    
+}
+.portfolio-button {
+    display: flex;
+justify-content: center;
+gap: 24px;
+} 
 .btn {
 color: var(--accent-color);
 background: #F4F4FD;
 border: 1px solid #E7E9FC;
 border-radius: 4px;
 cursor: pointer;
+display: flex;
+flex-direction: row;
+justify-content: center;
+align-items: center;
+padding: 12px 24px;
+flex: none;
+order: 1;
+flex-grow: 0;}
 
-}
 .btn:hover,
 .btn:focus
 {color: #FFFFFF;
 background: #404BBF;
 }
-/* .portfolio-pic {
-} */
-/* .portfolio-subtitle {
-} */
+.portfolio-flex{
+
+    
+}
+.portfolio-pic {
+    display: flex;
+    flex-wrap: wrap;
+}
+.pic-item{
+    width: 360px;
+    margin-right: 24px;
+    margin-bottom: 48px;
+    border: 1px solid #E7E9FC;
+}
+.pic-item:nth-child(3n){
+    margin-right: 0;
+}
+.pic-item:nth-last-child(-n+3){
+    margin-bottom: 0;
+}
+.portfolio-subtitle {
+    margin-bottom: 8px;
+    margin-left: 16px;
+}
 .portfolio-text{
 color: var(--text-color);
+margin-left: 16px;
 }
-/* .picture {
-} */
+.picture {
+    margin-bottom: 32px;
+}
